# software-portfolio

./: .gitignore  CODEOWNERS  LICENSE  README.md
projects/stock_trading/: pyproject.toml
projects/stock_trading/notebooks/: DNN_model.ipynb  LSTM_approach.ipynb  control_approach.ipynb  lstm_model.h5  parametric_model.ipynb  scaler.pkl
projects/stock_trading/src/utils/: __init__.py  logger_utils.py
