[tool.poetry]
name = "stock-trading"
version = "0.1.0"
description = "An automated stock-trading system using machine learning/deep learning."
authors = ["kmalkow <k.malkow@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
tensorflow = "^2.17.0"
plotly = "^5.22.0"
matplotlib = "^3.9.1"
loguru = "^0.7.2"
ta = "^0.11.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
pandas = "^2.2.2"
yfinance = "^0.2.41"
pandera = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
